k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dormwatch-front-v1
  labels:
    app.kubernetes.io/managed-by: argocd
